@@ -1,3 +1,8 @@
+2012-10-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twittytwister/twitter.py, twitter/account.py: Fixed Twitter API
+	  endpoints. The API version number '1' is required.
+
 2012-09-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.7 release.
